# ML-DL-AI

./: .gitignore  README.md  image_utils.py  main.py  models.py  pyproject.toml
 API_Calls/: README.md  assignment.py  pyproject.toml
M11 Lecture Materials/: 01_three_response_methods.docx  01_three_response_methods.py  01_three_response_methods_narrative.docx  01_three_response_methods_notes.docx  02_manual_orchestration.docx  02_manual_orchestration.py  02_manual_orchestration_narrative.docx  02_manual_orchestration_notes.docx  03_introducing_task.docx  03_introducing_task.py  03_introducing_task_narrative.docx  04_non_interactive_task_narrative.docx  05_full_interactive_task.docx  05_full_interactive_task_narrative.docx
M12-Lecture-Materials/: 01_tool_handler_with_task.py  02_sentiment_batch_processor.py  m12l1-agents-default.docx  m12l2-task-as-ai-primitive.docx  m12l3-multi-agent-composition.docx  m12l4-calculator-agent-narrative.docx  m12l4-calculator-agent.py  m12l5-calculator-tool-narrative.docx  m12l5-calculator-tool.py  m12l6-calculator-assistant-narrative.docx  m12l6-calculator-assistant.py
ML_modeling/: APMM10-clf-dataset01.csv  APMM10-clf-dataset02.csv  APMM10-clf-dataset04.csv  APMM10-clf-dataset08.csv  APMM10-clf-dataset11.csv  APMM10-clf-dataset14.csv  APMM10-clf-dataset17.csv  APMM10-clf-dataset18.csv  APMM10-reg-dataset03.csv  APMM10-reg-dataset13.csv  APMM12-timeseries02.csv  ensemble method.ipynb
Modeling_Excise/: APMM12-timeseries04.csv  APMM12-timeseries11.csv  APMM12-timeseries12.csv  APMM12-timeseries14.csv
fastapi_project/: auth.py  (+7 more)
(+31 files in other folders)
