[project]
name = "fastapi-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosmtplib>=5.1.0",
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
    "boto3>=1.43.14",
    "fastapi[standard]>=0.136.1",
    "greenlet>=3.5.1",
    "jinja2>=3.1.6",
    "pillow>=12.2.0",
    "psycopg[binary]>=3.3.4",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-settings>=2.14.1",
    "pyjwt>=2.13.0",
    "python-multipart>=0.0.29",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.47.0",
]
